# outreach_bot

./: .env.example  .gitignore  README.md  pyproject.toml  sample.csv
docs/: email_evaluator.md
src/outreach_bot/: __init__.py  cli.py  config.py
src/outreach_bot/analyzer/: __init__.py  context_analyzer.py
src/outreach_bot/cache/: __init__.py  sqlite_cache.py
src/outreach_bot/dry_run/: __init__.py  parallel_tester.py
src/outreach_bot/evaluator/: __init__.py  email_evaluator.py
src/outreach_bot/generator/: __init__.py  ai_opener.py  email_generator.py  templates.py
src/outreach_bot/generator/prompts/: __init__.py  variations.py
src/outreach_bot/gmail/: __init__.py  auth.py  draft_creator.py
src/outreach_bot/models/: __init__.py  contact.py  context.py  email.py
src/outreach_bot/scraper/: __init__.py  blog_finder.py  fetcher.py  parser.py
web/: README.md  index.html  server.py
