[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outreach-bot"
version = "0.1.0"
description = "AI-powered outreach email automation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "aiosqlite>=0.20.0",
    "openai>=1.50.0",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "typer>=0.12.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pandas>=2.2.0",
    "aiolimiter>=1.1.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
outreach = "outreach_bot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/outreach_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
